# nonebot-plugin-xibao

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
nonebot_plugin_xibao/: __init__.py
plugins/nonebot_plugin_xibao/: __init__.py
