[project]
name = "nonebot-plugin-xibao"
version = "1.0.0"
description = "喜报生成"
readme = "README.md"
requires-python = ">=3.9, <4.0"
authors = [{ name = "sp2dev", email = "theinsp2@outlook.com" }]
dependencies = [
  "nonebot2>=2.4.2,<3.0.0",
  "nonebot-plugin-saa>=0.1.0",
  "pillow>10.0.0"
]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.3.1"

[tool.poetry.dev-dependencies]
python = "^3.11"
nonebot2 = "^2.3.1"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
implicit_reexport = true
pretty = true
show_error_codes = true
strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"